Prevent scrollbar

--- a/public_html/style.css
+++ b/public_html/style.css
@@ -1,6 +1,7 @@
 html {
   background-color:#111;
   color:#eee;
+  overflow:hidden;
   margin:0px;
   padding:0px;
   height:100%;
